# airflow-duckdb

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-release.yml  python-release.yml
airflow_duckdb/operators/: duckdb.py
docker/: Dockerfile
examples/data/: public_chauffeurs.csv
examples/example1/: duckdb.py  flights.sql
examples/example2/: duckdb.py  expired_licenses.sql
examples/example3/: duckdb.py
examples/example4/: duckdb.py  flights.sql
scripts/: entrypoint.sh
